# M-ADP-PerformOps

./: .gitignore  Dockerfile  init_db.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-dev.yaml  rollback-dev.yaml
src/: main.py
src/api/: __init__.py  performops.py
src/app/: approve_performops.py  base_usecase.py  get_list.py  start_performops.py
src/common/: config.py  id_generator.py  schema.py
src/common/config/: __init__.py  apidog.py  database.py  openrouter.py  prometheus.py  resource_manager.py  settings.py
src/common/const/: vault.py
src/core/: error_tracker.py  llm.py  output_parser.py  requester.py  uow.py  user_action_store.py
src/core/analyzer/: metrics.py  workload_state.py
src/core/performops/: agents.py  analysis.py  core.py  judge.py  model.py  planner.py  repository.py  summarizer.py  validator.py
src/infra/: performops_analysis.py  performops_application_agent.py  performops_infrastructure_agent.py  performops_judge.py  performops_planner.py  performops_summarizer.py  performops_traffic_agent.py  performops_validator.py
src/infra/client/: apidog_client.py  fake_metrics_analyzer.py  fake_workload_state_analyzer.py  http_requester.py  prometheus_metrics_analyzer.py  resource_manager_workload_state_analyzer.py  sentry_error_tracker.py
src/infra/db/: session.py  uow.py
src/infra/db/performops/: model.py  repository.py
src/infra/llm/: openrouter.py
