[project]
name = "performops"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiomysql>=0.3.2",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "langchain-openai>=1.1.11",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
